--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
+<head>
+ <title>Ednecia Personal</title>
+ <link rel="stylesheet" type="text/css" href="index.css">
+ <script src="index.js"></script>
+ <link rel="shortcut icon" href="images/ednecia.png">
+</head>
 <body>
- Coming soon... ednecia.me
+<div class="bg">
+	 <div class="caption">
+    <span class="border" >EDNECIA MATLAPENG</span>
+    <br>
+   <span class="border" > University of Cape Town</span>
+    <br>
+    <span class="border" >COMPUTER SCIENCE</span>
+    
+  </div>
+
+</div>
 </body>
 </html>
