--- a/index.html
+++ b/index.html
@@ -7,16 +7,30 @@
  <link rel="shortcut icon" href="images/ednecia.png">
 </head>
 <body>
-<div class="bg">
+<div class="bg nav" id ="home">
 	 <div class="caption">
     <span class="border" >EDNECIA MATLAPENG</span>
     <br>
    <span class="border" > University of Cape Town</span>
     <br>
     <span class="border" >COMPUTER SCIENCE</span>
-    
+    <br>
+    <!--a href="#heading" id="scrolldown" >&#x21E9 </a-->
+    <nav>
+        <ul>
+     <a href="#heading"  id="scrolldown"  onclick="test('heading'); return false;" >&#x21E9 </a>
+      </ul>
+    </nav>
+     </p>
   </div>
-
+  </div>
+<div class="main nav" id="heading">  <p>This example creates a full page background image. Try to resize the browser window to see how it always will cover the full screen (when scrolled to top), and that it scales nicely on all screen sizes.</p>
 </div>
+<div class="navbar">
+  <a href="#home">Home</a>
+  <a href="https://www.linkedin.com/in/sewagodimo-matlapeng-b502b9103/" target="_blank">Linkedin</a>
+  <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">Personal Site</a>
+</div>
+
 </body>
 </html>
