--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
  <link rel="shortcut icon" href="images/ednecia.png">
 </head>
 <body>
+
+
 <div class="bg nav" id ="home">
 	 <div class="caption">
     <span class="border" >EDNECIA MATLAPENG</span>
@@ -15,22 +17,72 @@
     <br>
     <span class="border" >COMPUTER SCIENCE</span>
     <br>
-    <!--a href="#heading" id="scrolldown" >&#x21E9 </a-->
-    <nav>
-        <ul>
-     <a href="#heading"  id="scrolldown"  onclick="test('heading'); return false;" >&#x21E9 </a>
-      </ul>
-    </nav>
-     </p>
-  </div>
-  </div>
-<div class="main nav" id="heading">  <p>This example creates a full page background image. Try to resize the browser window to see how it always will cover the full screen (when scrolled to top), and that it scales nicely on all screen sizes.</p>
-</div>
-<div class="navbar">
+    <div class="navbar">
   <a href="#home">Home</a>
   <a href="https://www.linkedin.com/in/sewagodimo-matlapeng-b502b9103/" target="_blank">Linkedin</a>
   <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">Personal Site</a>
 </div>
+    <!--a href="#heading" id="scrolldown" >&#x21E9 </a-->
+    <nav>
+        <ul>
+     <a href="#scrolldown"  id="scrolldown"  onclick="test('heading'); return false;" >&#x21E9 </a>
+      </ul>
+    </nav>
+  </div>
+  </div>
+  <div class="heading" id="heading">Who Am I</div>
+<div class="mainbox" >
+<br>
+<div class="row">
+
+  <div class="column">
+    <div class="card">
+      <img src="images/parents.jpg" alt="my parents" style="width:100%;height:200px;">
+      <div class="container">
+        <h2>Background</h2>
+        <p class="title">I am from Rustenburg</p>
+        <p>I come from a family of 6 including my parents. We are 3 girls, 1 boy and both parents. I am the 3rd child followed by my adorable little sister</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="images/grad.jpg" alt="my graduation picture" style="width:100%;height:200px;">
+      <div class="container">
+        <h2>UCT Graduate</h2>
+        <p class="title">BSc. in Computer Science</p>
+        <p>Majored in Computer Science and 3D gaming, I am currently doing an Honors in Computer Science</p>
+      </div>
+    </div>
+  </div>
+
+ <div class="column">
+    <div class="card">
+      <img src="images/moshal.jpg" alt="me with martin" style="width:100%; height:200px;">
+      <div class="container">
+        <h2 href="www.moshalscholarship.org">Moshal Scholarship </h2>
+        <p class="title">Recipient since 2014</p>
+        <p>I am a pround  student of the Moshal Scholarship programme. This is Martin Moshal and I at the 2017 Annul event</p>
+       
+      </div>
+    </div>
+      </div>
+
+ <div class="column">
+    <div class="card">
+      <img src="images/wics.png" alt="Women In Computioniuner Science" style="width:100%;height:200px;">
+      <div class="container">
+        <h2>Treasurer</h2>
+        <p class="title">Women in Computer Science, UCT</p>
+        <p>WICS is a UCT society that aims to encourage women to consider careers in computer science and strives to making the coding enviroment more inclusive</p>
+      </div>
+    </div>
+  </div>
+
+
+   </div>
+   </div>
 
 </body>
 </html>
