added google fonts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
  <title>Ednecia Personal</title>
  <link rel="stylesheet" type="text/css" href="index.css">
+<link href='https://fonts.googleapis.com/css?family=Emblema One' rel='stylesheet'>
  <script src="index.js"></script>
  <link rel="shortcut icon" href="images/ednecia.png">
 </head>
@@ -17,10 +18,30 @@
     <br>
     <span class="border" >COMPUTER SCIENCE</span>
     <br>
+
     <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="https://www.linkedin.com/in/sewagodimo-matlapeng-b502b9103/" target="_blank">Linkedin</a>
-  <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">Personal Site</a>
+  <a href="#home">HOME</a>
+   <a href="#heading">ABOUT</a>
+   <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">PERSONAL SITE</a>
+  
+   <div style="" class="socials">
+  <a href="https://www.linkedin.com/in/sewagodimo-matlapeng-b502b9103/" target="_blank" " class="social">
+                <img src="images/social/in.png" class="social"></a>
+
+  <a href="https://www.youtube.com/channel/UC99EHFaE9xNcH7WlIPeqGbw" target="_blank" class="social" >
+                       <img src="images/social/youtube.png" class="social"> </a>
+
+  <a href="https://www.instagram.com/matlapeng" target="_blank" class="social">
+                       <img src="images/social/instagram.png" class="social" ></a>
+
+   <a href="https://plus.google.com/+EdneciaMatlapeng" target="_blank" class="social">
+                      <img src="images/social/gplus.png" class="social" ></a>
+
+    <a href="https://www.facebook.com/sewagodimo.matlapeng" target="_blank" class="social">
+                      <img src="images/social/facebook.png" class="social"></a>
+    <a class="social"></a>
+    </div>
+  
 </div>
     <!--a href="#heading" id="scrolldown" >&#x21E9 </a-->
     <nav>
@@ -30,7 +51,7 @@
     </nav>
   </div>
   </div>
-  <div class="heading" id="heading">Who Am I</div>
+  <div class="heading" id="heading">WHO AM I</div>
 <div class="mainbox" >
 <br>
 <div class="row">
@@ -64,7 +85,6 @@
         <h2 href="www.moshalscholarship.org">Moshal Scholarship </h2>
         <p class="title">Recipient since 2014</p>
         <p>I am a pround  student of the Moshal Scholarship programme. This is Martin Moshal and I at the 2017 Annul event</p>
-       
       </div>
     </div>
       </div>
