--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
  
  <link rel="stylesheet" type="text/css" href="index.css">
 <link href='https://fonts.googleapis.com/css?family=Emblema One' rel='stylesheet'>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
  <script src="index.js"></script>
  <script src="particles.js"></script>
  <link rel="shortcut icon" href="images/ednecia.png">
+ <script >
+   $(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
+
+ </script>
 
   
 </head>
@@ -50,12 +79,26 @@
     <!--a href="#heading" id="scrolldown" >&#x21E9 </a-->
     <nav>
         <ul>
-     <a href="#scrolldown"  id="scrolldown"  onclick="test('heading'); return false;" >&#x21E9 </a>
+     <a href="#down"  id="scrolldown"  onclick="test('heading'); return false;" >&#x21E9 </a>
       </ul>
     </nav>
+    <div id="down"></div>
   </div>
   </div>
-  <div class="heading" id="heading">ABOUT ME</div>
+
+
+<div class="heading" id="particles">GUESS THE WORD</div>
+<div style="background: black;text-align: center;">
+<canvas id="scene" style="height: 400px;width: 100%"></canvas>
+  <input id="copy" type="text" value="Ednecia" style="display: none;background: black;" />
+
+<input id="guesstext" type="text" value=""  />
+<input type="submit" onclick="checkWord()" value="guess">
+    <script src="javascript.js" ></script>
+
+ 
+</div>
+  <div class="heading" id="about">ABOUT ME</div>
 <div class="mainbox" >
 <br>
 <div class="row">
@@ -107,17 +150,6 @@
 
    </div>
    </div>
-<div class="heading" id="particles">GUESS THE WORD</div>
-<div style="background: black;text-align: center;">
-<canvas id="scene" style="height: 400px;width: 100%"></canvas>
-  <input id="copy" type="text" value="Ednecia" style="display: none;background: black;" />
-
-<input id="guesstext" type="text" value=""  />
-<input type="submit" onclick="checkWord()" value="guess">
-    <script src="javascript.js" ></script>
-
- 
-</div>
 
 
    
