slides well now

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
  <link rel="stylesheet" type="text/css" href="index.css">
 <link href='https://fonts.googleapis.com/css?family=Emblema One' rel='stylesheet'>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
- <script src="index.js"></script>
+<script src="index.js"></script>
  <script src="particles.js"></script>
  <link rel="shortcut icon" href="images/ednecia.png">
  <script >
@@ -27,7 +26,7 @@
       // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
       $('html, body').animate({
         scrollTop: $(hash).offset().top
-      }, 800, function(){
+      }, 1000, function(){
    
         // Add hash (#) to URL when done scrolling (default click behavior)
         window.location.hash = hash;
@@ -54,7 +53,7 @@
 
     <div class="navbar">
   <a href="#home">HOME</a>
-   <a href="#heading">ABOUT</a>
+   <a href="#about">ABOUT</a>
    <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">PERSONAL SITE</a>
   
    <div style="" class="socials">
