I added a working tic toe game just have to add some ai

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </div>
 
 
-<div class="heading" id="particles">GUESS THE WORD</div>
+<div class="heading" id="particles">guess the word the bubbles will form</div>
 <div style="background: black;text-align: center;">
 <canvas id="scene" style="height: 400px;width: 100%"></canvas>
   <input id="copy" type="text" value="Ednecia" style="display: none;background: black;" />
@@ -97,6 +97,33 @@
 
  
 </div>
+<div class="heading" id="tictac">Lets Play tic tac toe</div>
+
+<div class="messages"></div>
+<div class="turn"></div>
+
+<table>
+  <tr>
+    <td class="item1"></td>
+    <td class="item2"></td>
+    <td class="item3"></td>
+  </tr>
+  <tr>
+    <td class="item4"></td>
+    <td class="item5"></td>
+    <td class="item6"></td>
+  </tr>
+  <tr>
+    <td class="item7"></td>
+    <td class="item8"></td>
+    <td class="item9"></td>
+  </tr>
+</table>
+<br />
+<input class="reset" type="button" value="Reset" />
+    <script src="tittac.js"></script>
+<div style="height: 50px;"></div>
+
   <div class="heading" id="about">ABOUT ME</div>
 <div class="mainbox" >
 <br>
