--- a/index.html
+++ b/index.html
@@ -6,37 +6,10 @@
  <link rel="stylesheet" type="text/css" href="index.css">
 <link href='https://fonts.googleapis.com/css?family=Emblema One' rel='stylesheet'>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <script src="index.js"></script>
  <script src="particles.js"></script>
  <link rel="shortcut icon" href="images/ednecia.png">
- <script >
-   $(document).ready(function(){
-  // Add smooth scrolling to all links
-  $("a").on('click', function(event) {
-
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 1000, function(){
-   
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-});
-
- </script>
-
   
 </head>
 <body>
@@ -78,7 +51,9 @@
     <!--a href="#heading" id="scrolldown" >&#x21E9 </a-->
     <nav>
         <ul>
-     <a href="#down"  id="scrolldown"  onclick="test('heading'); return false;" >&#x21E9 </a>
+        <section id="scrolldown" style="font-size:104px" >
+     <a href="#down"   >  </i> </a>
+     </section>
       </ul>
     </nav>
     <div id="down"></div>
