I am not adding the ai, so far I have made changes to allow the computer to calculate a move, still a bit glitchy but progress

--- a/index.html
+++ b/index.html
@@ -70,24 +70,24 @@
 </div>
 <div class="heading" id="tictac">Lets Play tic tac toe</div>
 
-<div class="messages" style="height: 10%"></div>
-<div class="turn"></div>
+<div class="messages" style="height: 10%; color:red;"></div>
+<div class="turn" style=" color:white;"></div>
 
-<table style="background: lightblue">
+<table style="background: lightblue;">
   <tr>
-    <td class="item1"></td>
-    <td class="item2"></td>
-    <td class="item3"></td>
+    <td class="item1" id="a1"></td>
+    <td class="item2" id="a2"></td>
+    <td class="item3" id="a3"></td>
   </tr>
   <tr>
-    <td class="item4"></td>
-    <td class="item5"></td>
-    <td class="item6"></td>
+    <td class="item4" id="b1"></td>
+    <td class="item5" id="b2"></td>
+    <td class="item6" id="b3"></td>
   </tr>
   <tr>
-    <td class="item7"></td>
-    <td class="item8"></td>
-    <td class="item9"></td>
+    <td class="item7" id="c1"></td>
+    <td class="item8"  id="c2"></td>
+    <td class="item9"  id="c3"></td>
   </tr>
 </table>
 <br />
