the ai for the tic tac toe works

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </div>
 <div class="heading" id="tictac">Lets Play tic tac toe</div>
 
-<div class="messages" style="height: 10%; color:red;"></div>
+<div class="messages" style="height: 10%; color:orange"></div>
 <div class="turn" style=" color:white;"></div>
 
 <table style="background: lightblue;">
