added projects page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" type="text/css" href="index.css">
 <link href='https://fonts.googleapis.com/css?family=Emblema One' rel='stylesheet'>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <script src="index.js"></script>
  <script src="particles.js"></script>
@@ -19,40 +20,37 @@
    <div class="caption">
     <span class="border" >EDNECIA MATLAPENG</span>
     <br>
-   <span class="border" > University of Cape Town</span>
+   <span class="border"> University of Cape Town</span>
     <br>
     <span class="border" >COMPUTER SCIENCE</span>
     <br>
      <a href="javascript:void(0);" class="menuIcon2" id="menuIcon" onclick="showMenu()">&#9776;</a>
+     <a href="#works" class="infoIcon fa fa-info-circle" id="infoIcon" style="display: none;"></a>
     <div class="navbar" id="menu">
    
   <a href="#home">HOME</a>
    <a href="#about">ABOUT</a>
    <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">PERSONAL SITE</a>
   
-   <section style="" class="socials">
-  <a href="https://www.linkedin.com/in/sewagodimo-matlapeng-b502b9103/" target="_blank" " class="social">
-                <img src="images/social/in.png" class="social"></a>
+   <section style="" class="socials"> 
 
-  <a href="https://www.youtube.com/channel/UC99EHFaE9xNcH7WlIPeqGbw" target="_blank" class="social" >
-                       <img src="images/social/youtube.png" class="social"> </a>
+   <a href="https://www.github.com/sewagodimo" target="_blank" " class="social fa fa-github" style="font-size: 30px;"> </a>
+   
+  <a href="https://www.linkedin.com/in/sewagodimo-matlapeng-b502b9103/" target="_blank" " class="social   fa fa-linkedin-square" style="font-size: 30px;"></a>
 
-  <a href="https://www.instagram.com/matlapeng" target="_blank" class="social">
-                       <img src="images/social/instagram.png" class="social" ></a>
+  <a href="https://www.youtube.com/channel/UC99EHFaE9xNcH7WlIPeqGbw" target="_blank" class="social fa fa-youtube-square"   style="font-size: 30px; "> </a>
 
-   <a href="https://plus.google.com/+EdneciaMatlapeng" target="_blank" class="social">
-                      <img src="images/social/gplus.png" class="social" ></a>
+  <a href="https://www.instagram.com/matlapeng" target="_blank" class="social fa fa-instagram"  style="font-size: 30px;"></a>
 
-    <a href="https://www.facebook.com/sewagodimo.matlapeng" target="_blank" class="social">
-                      <img src="images/social/facebook.png" class="social"></a>
+   <a href="https://plus.google.com/+EdneciaMatlapeng" target="_blank" class="social fa fa-google-plus-square"  style="font-size: 30px; "></a>
+
+    <a href="https://www.facebook.com/sewagodimo.matlapeng" target="_blank" class="social fa fa-facebook-official" style="font-size: 30px; "></a>
     <a class="social"></a>
     </section>
   
 </div>
     <!--a href="#heading" id="scrolldown" >&#x21E9 </a-->
-     <a href="#down"   > <section id="scrolldown" style="font-size:104px" ></section>  </a>
- 
-  </div>
+     <a href="#down"   > <section id="scrolldown" style="font-size:104px" ></section></a> </div>
    
   </div>
 
@@ -65,7 +63,7 @@
 <input id="guesstext" type="text" value=""  />
 <input type="submit" onclick="checkWord()" value="guess">
     <script src="javascript.js" ></script>
-
+<div style="height: 20px;"></div>
  
 </div>
 <div class="heading" id="tictac">Lets Play tic tac toe</div>
@@ -95,16 +93,52 @@
     <script src="tittac.js"></script>
 <div style="height: 50px;"></div>
 
-  <div class="heading" id="about">ABOUT ME</div>
+<div class="heading" id="works" >WHAT I DO</div>
+<div class="mainbox" style="background-color: black;">
+
+ <div >
+
+   <a href=""  id="webdev" style="font-size: 25px; text-decoration: none;">
+   <img src="images/html.png" style="width: 10%;height: 10%;" class="projects a1"></a>
+
+ <a href=""  id="wordpress" style="font-size: 25px; text-decoration: none;">
+  <img src="images/wordpress.png" style="width: 10%;height: 10%;" class="projects a2"></a>
+
+  <a href=""  id="wordpress" style="font-size: 25px; text-decoration: none;">
+  <img src="images/rails.png" style="width: 10%;height: 10%;" class="projects a3"></a>
+
+  <a href=""  id="wordpress" style="font-size: 25px; text-decoration: none;">
+  <img src="images/react.png" style="width: 10%;height: 10%;" class="projects a4"></a>
+
+    <a href=""  id="wordpress" style="font-size: 25px; text-decoration: none;">
+  <img src="images/android.png" style="width: 10%;height: 10%;" class="projects a5"></a>
+    <a href=""  id="wordpress" style="font-size: 25px; text-decoration: none;">
+  <img src="images/unity.jpg" style="width: 15%;height: 10%;" class="projects a6"></a>
+
+  </div>
+  <ul style=" color: white; font-size: 25px;right:-50%;">
+
+<li>Blogs</li>
+<li>3D and 2D games</li>
+<li>Personal Webistes</li>
+<li>Proffesional Websites</li>
+<li>Mobile Application Development</li>
+<li>Android Native App Development</li>
+
+
+  
+</ul>
+</div>
+  <div class="heading" id="about" >ABOUT ME</div>
 <div class="mainbox" >
 <br>
 <div class="row">
 
   <div class="column">
     <div class="card">
-      <img src="images/parents.jpg" alt="my parents" style="width:100%;height:200px;">
+      <img src="images/parents.jpg" alt="my parents" style="width:65%;height:200px; border-radius: 50%;">
       <div class="container">
-        <h2>Background</h2>
+        <h2 style="color: black;">Background</h2>
         <p class="title">I am from Rustenburg</p>
         <p>I come from a family of 6 including my parents. We are 3 girls, 1 boy and both parents. I am the 3rd child followed by my adorable little sister</p>
       </div>
@@ -113,9 +147,9 @@
 
   <div class="column">
     <div class="card">
-      <img src="images/grad.jpg" alt="my graduation picture" style="width:100%;height:200px;">
+      <img src="images/grad.jpg" alt="my graduation picture" style="width:65%;height:200px; border-radius: 50%;">
       <div class="container">
-        <h2>UCT Graduate</h2>
+        <h2 style="color: black;">UCT Graduate</h2>
         <p class="title">BSc. in Computer Science</p>
         <p>Majored in Computer Science and 3D gaming, I am currently doing an Honors in Computer Science</p>
       </div>
@@ -124,9 +158,9 @@
 
  <div class="column">
     <div class="card">
-      <img src="images/moshal.jpg" alt="me with martin" style="width:100%; height:200px;">
+      <img src="images/moshal.jpg" alt="me with martin" style="width:100%; height:200px; border-radius: 50%;">
       <div class="container">
-        <h2 href="www.moshalscholarship.org">Moshal Scholarship </h2>
+        <h2 href="www.moshalscholarship.org"  style="color: black;">Moshal Scholarship </h2>
         <p class="title">Recipient since 2014</p>
         <p>I am a pround  student of the Moshal Scholarship programme. This is Martin Moshal and I at the 2017 Annul event</p>
       </div>
@@ -135,9 +169,9 @@
 
  <div class="column">
     <div class="card">
-      <img src="images/wics.png" alt="Women In Computioniuner Science" style="width:100%;height:200px;">
+      <img src="images/wics.png" alt="Women In Computer Science" style="width:100%;height:200px;  border-radius: 50%;">
       <div class="container">
-        <h2>Treasurer</h2>
+        <h2 style="color: black;">Treasurer</h2>
         <p class="title">Women in Computer Science, UCT</p>
         <p>WICS is a UCT society that aims to encourage women to consider careers in computer science and strives to making the coding enviroment more inclusive</p>
       </div>
@@ -147,7 +181,13 @@
 
    </div>
    </div>
+ <div  style="position: relative;bottom: 0%; color: white;font: 400 15px/1.8 'Lato', sans-serif; width: 100%;
+  height:5%; text-align: center;">
+  <img src="images/ednecia.png" style="height: 25px;width: 25px">
+   Made by Sewagodimo Ednecia Matlapeng 
+   mtledn001@myuct.ac.za 
 
+ </div>
 
    
 </body>
