changed the install file to include some of the messaging stuff

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <div class="heading" style="text-align:center"  ;"><b>What can I do for you</b></div>
 <div class="formcontainer">
   <p><span class="error">* required field.</span></p>
-<form  method="post" action="index.php" > 
+<form  method="post" action="install.php" > 
 
     <label for="name" > Name <b>*</b> </label>
     <input type="text" id="name" name="name" placeholder="Your name..">
