I added a google form

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <div style="height: 20px;"></div>
  
 </div>
+<div class="photo-parallax"> 
 <div class="heading" id="tictac">Lets Play tic tac toe</div>
 
 <div class="messages" style="height: 10%; color:orange"></div>
@@ -91,7 +92,7 @@
 <input class="reset" type="button" value="Reset" />
     <script src="tittac.js"></script>
 <div style="height: 50px;"></div>
-
+</div>
 <div class="heading" id="works" >WHAT I DO</div>
 <div class="mainbox" style="background-color: black;">
 
@@ -128,6 +129,7 @@
   
 </ul>
 </div>
+<div>
   <div class="heading" id="about" >ABOUT ME</div>
 <div class="mainbox" >
 <br>
@@ -181,39 +183,10 @@
    </div>
 
    </div>
-<div id="contactheading" class="contact">
-<div class="heading" style="text-align:center"  ;"><b>What can I do for you</b></div>
-<div class="formcontainer">
-  <p><span class="error">* required field.</span></p>
-<form  method="post" action="install.php" > 
 
-    <label for="name" > Name <b>*</b> </label>
-    <input type="text" id="name" name="name" placeholder="Your name..">
+<div >
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSclNi16YlkiJ5iq6sacWuvR4CyAUYZJm7VIVkRmmz9wp3oKjA/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-    <label for="email">Email<b>*</b></label>
-    <input type="text" id="email" name="email" placeholder="Your email address name..">
-    <br/>
-    <label for="orgname">Organization</label>
-    <input type="text" id="org" name="org" placeholder="The name of your organization..">
-
-
-    <label for="via">Where did you hear about me</label>
-    <select id="via" name="via">
-      <option value="A-friend">A friend</option>
-      <option value="Social-Media">Social Media</option>
-      <option value="Previous-client">Previous client</option>
-    </select>
-
-    <label for="subject">Message<b>*</b></label>
-    <textarea id="msg" name="msg" placeholder="Enter message here.." style="height:200px"></textarea>
-
-    <br/>
-    <label for="via">*What is 2+2? (Anti-spam)</label>
-  <input name="human" placeholder="Type Here" type="text">
-  <br/> <br/>
-    <input type="submit" value="Send">
-    <!--input type="submit" value="Submit"-->
-    </form>
 </div>
 
 
