--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="heading" id="particles">guess the word the bubbles will form</div>
 <div style="background: black;text-align: center;">
 <canvas id="scene" style="height: 480px;width: 100%"></canvas>
-  <input id="copy" type="guessgame" value="Ednecia" style="display: none;background: white;" />
+  <input id="copy" type="text" value="Ednecia" style="display: none;background: white;" />
 
 <input id="guesstext" type="text" value=""  />
 <input type="submit" onclick="checkWord()" value="guess">
