--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
    
   <a href="#home">HOME</a>
    <a href="#about">ABOUT</a>
+   <a href="#contactheading">CONTACT</a>
    <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">PERSONAL SITE</a>
   
    <section style="" class="socials"> 
@@ -57,7 +58,7 @@
 <div class="heading" id="particles">guess the word the bubbles will form</div>
 <div style="background: black;text-align: center;">
 <canvas id="scene" style="height: 480px;width: 100%"></canvas>
-  <input id="copy" type="text" value="Ednecia" style="display: none;background: white;" />
+  <input id="copy" type="text" value="Ednecia" style="display: none;background-color: white;" />
 
 <input id="guesstext" type="text" value=""  />
 <input type="submit" onclick="checkWord()" value="guess">
@@ -184,11 +185,27 @@
 
    </div>
 
-<div >
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSclNi16YlkiJ5iq6sacWuvR4CyAUYZJm7VIVkRmmz9wp3oKjA/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
+ 
+<div  class="contact">
+<div class="heading" style="text-align:center" id="contactheading" ;"><b>CONTACT ME</b></div>
+<div class="formcontainer">
+  <p><span class="error">* required field.</span></p>
+<form  action="https://docs.google.com/forms/d/e/1FAIpQLSclNi16YlkiJ5iq6sacWuvR4CyAUYZJm7VIVkRmmz9wp3oKjA/formResponse" > 
+      <label for="name" > Name <b>*</b> </label>
+    <input type="text" id="name" name="entry.1088104679" placeholder="">
+<br/>
+     <label for="email">Email<b>*</b></label>
+    <input type="text" id="email" name="entry.500406251" placeholder="" style="width:400px">
+<br/>
+
+    <label for="subject">Message<b>*</b></label>
+    <textarea id="msg" name="entry.257763532" placeholder="Write something.." style="height:100px"></textarea>
+
+    <input type="submit" value="Send" class="button">
+    </form>
 </div>
-
+</div>
 
  <div  style="position: relative;bottom: 0%; color: white;font: 400 15px/1.8 'Lato', sans-serif; width: 100%;
   height:5%; text-align: center;">
