Updated the readme

--- a/index.html
+++ b/index.html
@@ -25,32 +25,33 @@
     <br>
      <a href="javascript:void(0);" class="menuIcon2" id="menuIcon" onclick="showMenu()">&#9776;</a>
      <a href="#works" class="infoIcon fa fa-info-circle" id="infoIcon" style="display: none;"></a>
+    
     <div class="navbar" id="menu">
-   
-  <a href="#home">HOME</a>
-   <a href="#about">ABOUT</a>
-   <a href="#contactheading">CONTACT</a>
-   <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">PERSONAL SITE</a>
+       <a href="#home">HOME</a>
+       <a href="#about">ABOUT</a>
+        <a href="#contactheading">CONTACT</a>
+         <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">PERSONAL SITE</a>
   
-   <section style="" class="socials"> 
+        <section style="" class="socials"> 
 
-   <a href="https://www.github.com/sewagodimo" target="_blank" " class="social fa fa-github" style="font-size: 30px;"> </a>
+           <a href="https://www.github.com/sewagodimo" target="_blank" " class="social fa fa-github" style="font-size: 30px;"> </a>
    
-  <a href="https://www.linkedin.com/in/sewagodimo-matlapeng-b502b9103/" target="_blank" " class="social   fa fa-linkedin-square" style="font-size: 30px;"></a>
+            <a href="https://www.linkedin.com/in/sewagodimo-matlapeng-b502b9103/" target="_blank" " class="social   fa fa-linkedin-square" style="font-size: 30px;"></a>
 
-  <a href="https://www.youtube.com/channel/UC99EHFaE9xNcH7WlIPeqGbw" target="_blank" class="social fa fa-youtube-square"   style="font-size: 30px; "> </a>
+                <a href="https://www.youtube.com/channel/UC99EHFaE9xNcH7WlIPeqGbw" target="_blank" class="social fa fa-youtube-square"   style="font-size: 30px; "> </a>
 
-  <a href="https://www.instagram.com/matlapeng" target="_blank" class="social fa fa-instagram"  style="font-size: 30px;"></a>
+              <a href="https://www.instagram.com/matlapeng" target="_blank" class="social fa fa-instagram"  style="font-size: 30px;"></a>
 
-   <a href="https://plus.google.com/+EdneciaMatlapeng" target="_blank" class="social fa fa-google-plus-square"  style="font-size: 30px; "></a>
+           <a href="https://plus.google.com/+EdneciaMatlapeng" target="_blank" class="social fa fa-google-plus-square"  style="font-size: 30px; "></a>
 
-    <a href="https://www.facebook.com/sewagodimo.matlapeng" target="_blank" class="social fa fa-facebook-official" style="font-size: 30px; "></a>
-    <a class="social"></a>
-    </section>
+              <a href="https://www.facebook.com/sewagodimo.matlapeng" target="_blank" class="social fa fa-facebook-official" style="font-size: 30px; "></a>
+            <a class="social"></a>
+       </section>
   
-</div>
+   </div>
     <!--a href="#heading" id="scrolldown" >&#x21E9 </a-->
-     <a href="#down"   > <section id="scrolldown" style="font-size:104px" ></section></a> </div>
+     <a href="#down"   > <section id="scrolldown" style="font-size:104px" ></section></a> 
+   </div>
    
   </div>
 
