I added some google fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href='https://fonts.googleapis.com/css?family=Emblema One' rel='stylesheet'>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Monofett|Poiret+One" rel="stylesheet">
 
 <script src="index.js"></script>
  <script src="particles.js"></script>
@@ -27,7 +28,7 @@
      <a href="#works" class="infoIcon fa fa-info-circle" id="infoIcon" style="display: none;"></a>
     
     <div class="navbar" id="menu">
-       <a href="#home">HOME</a>
+       <a href="#home" >HOME</a>
        <a href="#about">ABOUT</a>
         <a href="#contactheading">CONTACT</a>
          <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">PERSONAL SITE</a>
@@ -56,7 +57,7 @@
   </div>
 
   <div id="down"></div>
-<div class="heading" id="particles">guess the word the bubbles will form</div>
+<div class="heading" id="particles">GUESS THE WORD THAT THE BUBBLES WILL FORM?</div>
 <div style="background: black;text-align: center;">
 <canvas id="scene" style="height: 480px;width: 100%"></canvas>
   <input id="copy" type="text" value="" style="display: none;background-color: white;" />
@@ -68,7 +69,7 @@
  
 </div>
 <div class="photo-parallax"> 
-<div class="heading" id="tictac">Lets Play tic tac toe</div>
+<div class="heading" id="tictac">LET'S PLAY TIC TAC TOE</div>
 
 <div class="messages" style="height: 10%; color:orange"></div>
 <div class="turn" style=" color:white;"></div>
@@ -118,14 +119,22 @@
   <img src="images/unity.jpg" style="width: 5%;height: 5%;" class="projects a6"></a>
 
   </div>
-  <ul style=" color: white; font-size: 25px;right:-50%;">
+  <ul style=" color: orange; font-size: 25px;right:-50%;">
 
-<li>Blogs</li>
-<li>3D and 2D games</li>
-<li>Personal Webistes</li>
-<li>Proffesional Websites</li>
-<li>Mobile Application Development</li>
-<li>Android Native App Development</li>
+<div class="project-container" > 
+  <p>
+    <img src="images/android.png" class="project-image">
+    <h2 class="project-tittle">Android Studio Development</h2>
+    <p class="project-paragraph">I have done xyz in android studio</p>
+    <a href="https://github.com/sewagodimo/sewagodimo.github.io" class="project-link">Link to source code</a>
+  
+</p></div>
+
+3D and 2D games
+Personal Webistes
+Proffesional Websites
+Mobile Application Development
+Android Native App Development
 
 
   
