--- a/index.html
+++ b/index.html
@@ -120,15 +120,20 @@
 
   </div>
   <ul style=" color: orange; font-size: 25px;right:-50%;">
-
-<div class="project-container" > 
-  <p>
-    <img src="images/android.png" class="project-image">
-    <h2 class="project-tittle">Android Studio Development</h2>
-    <p class="project-paragraph">I have done xyz in android studio</p>
-    <a href="https://github.com/sewagodimo/sewagodimo.github.io" class="project-link">Link to source code</a>
-  
-</p></div>
+    <div class="row">
+ <div class="column" style="border-top-color:#32CD32;">
+    <div class="card-do" style="border-top:solid 4px #7CFC00;">
+     
+      <div class="container-do">
+        <h2>Android Development </h2>
+        <p class="title-do">ICT STUDENT APP</p>
+        <p class="project-description">I developed a mobile application for ICT, a chef school in Cape Town. The application is used to help the school keep in contat with the school via SMS, emails. It also allows the students to update their details</p>
+      </div>
+       <img src="images/android.png" alt="android logo" style="width:80%; height:200px; border-radius: 50%;">
+       <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp" ><button class="button-do" style="background-color: #32CD32;">View Code</button></a>
+    </div>
+      </div>
+      </div>
 
 3D and 2D games
 Personal Webistes
