I added the image django

--- a/index.html
+++ b/index.html
@@ -121,7 +121,20 @@
   </div>
   <ul style=" color: orange; font-size: 25px;right:-50%;">
     <div class="row">
- <div class="column" style="border-top-color:#32CD32;">
+ <div class="column" id="android" style="border-top-color:#32CD32;">
+    <div class="card-do" style="border-top:solid 4px #7CFC00;">
+     
+      <div class="container-do" >
+        <h2>Android Development </h2>
+        <p class="title-do">ICT STUDENT APP</p>
+        <p class="project-description">I developed a mobile application for ICT, a chef school in Cape Town. The application is used to help the school keep in contat with the school via SMS, emails. It also allows the students to update their details</p>
+      </div>
+       <img src="images/android.png" alt="android logo" style="width:80%; height:200px; border-radius: 50%;">
+       <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp" ><button class="button-do" style="background-color: #32CD32;">View Code</button></a>
+    </div>
+      </div>
+
+       <div class="column" id="django" style="border-top-color:#32CD32;">
     <div class="card-do" style="border-top:solid 4px #7CFC00;">
      
       <div class="container-do">
@@ -134,14 +147,6 @@
     </div>
       </div>
       </div>
-
-3D and 2D games
-Personal Webistes
-Proffesional Websites
-Mobile Application Development
-Android Native App Development
-
-
   
 </ul>
 </div>
