I added the profile info for the django api

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="container-do" >
         <h2>Android Development </h2>
         <p class="title-do">ICT STUDENT APP</p>
-        <p class="project-description">I developed a mobile application for ICT, a chef school in Cape Town. The application is used to help the school keep in contat with the school via SMS, emails. It also allows the students to update their details</p>
+        <p class="project-description">I developed a mobile application for ICT, a chef school in Cape Town. The application is used to help the school keep in contat with the school via SMS, emails.</p>
       </div>
        <img src="images/android.png" alt="android logo" style="width:80%; height:200px; border-radius: 50%;">
        <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp" ><button class="button-do" style="background-color: #32CD32;">View Code</button></a>
@@ -135,15 +135,15 @@
       </div>
 
        <div class="column" id="django" style="border-top-color:#32CD32;">
-    <div class="card-do" style="border-top:solid 4px #7CFC00;">
+    <div class="card-do" style="border-top:solid 4px #006400;">
      
       <div class="container-do">
-        <h2>Android Development </h2>
-        <p class="title-do">ICT STUDENT APP</p>
-        <p class="project-description">I developed a mobile application for ICT, a chef school in Cape Town. The application is used to help the school keep in contat with the school via SMS, emails. It also allows the students to update their details</p>
+        <h2>DJANGO API </h2>
+        <p class="title-do">ICT STUDENT API</p>
+        <p class="project-description">I developed a web API for ICT, it is used by the mobile application to store, retrieve and update student information</p>
       </div>
-       <img src="images/android.png" alt="android logo" style="width:80%; height:200px; border-radius: 50%;">
-       <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp" ><button class="button-do" style="background-color: #32CD32;">View Code</button></a>
+       <img src="images/django.png" alt="android logo" style="width:80%; height:200px; border-radius: 50%;">
+       <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp" ><button class="button-do" style="background-color: #006400;">View Code</button></a>
     </div>
       </div>
       </div>
