--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <p class="project-description">I developed a mobile application for ICT, a chef school in Cape Town. The application is used to help the school keep in contat with the school via SMS, emails.</p>
       </div>
        <img src="images/android.png" alt="android logo" style="width:80%; height:200px;">
-       <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp" ><button class="button-do" style="background-color: #32CD32;">View Code</button></a>
+       <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp" ><button class="button-do android" style="">View Code</button></a>
     </div>
       </div>
 
@@ -124,7 +124,7 @@
         <p class="project-description">I developed a web API for ICT, it is used by the mobile application to store, retrieve and update student information. I used the django rest framework to build the API</p>
       </div>
        <img src="images/django.png" alt="django logo" style="width:80%; height:200px; ">
-       <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp/tree/master/API" ><button class="button-do" style="background-color: #003300;">View Code</button></a>
+       <a href="https://github.com/sewagodimo/ChefSchoolAndroidApp/tree/master/API" ><button class="button-do django" style="">View Code</button></a>
     </div>
       </div>
       <!--Web Development-->
@@ -137,7 +137,7 @@
         <p class="project-description">I developed my website using html5, css and javascript. The website is hosted on github static pages. It contains information about me and some of the projects that I have built</p>
       </div>
        <img src="images/html.png" alt="html logo" style="width:80%; height:200px; ">
-       <a href="https://github.com/sewagodimo/sewagodimo.github.io" ><button class="button-do" style="background-color: #FF4500;">View Code</button></a>
+       <a href="https://github.com/sewagodimo/sewagodimo.github.io" ><button class="button-do html" style="">View Code</button></a>
     </div>
       </div>
          <!--Ruby Development-->
@@ -150,7 +150,7 @@
         <p class="project-description">I developed my website using RUBY on rails. The website is hosted on heroku.</p>
       </div>
        <img src="images/rails.png" alt="ruby logo" style="width:80%; height:200px; ">
-       <a href="https://github.com/sewagodimo/personalwebsite_rubyOnRails" ><button class="button-do" style="background-color: #CD5C5C;">View Code</button></a>
+       <a href="https://github.com/sewagodimo/personalwebsite_rubyOnRails" ><button class="button-do ruby" style="">View Code</button></a>
     </div>
       </div>
            <!--Unity 3d-->
@@ -159,11 +159,11 @@
      
       <div class="container-do">
         <h2>Unity 3d</h2>
-        <p class="title-do">A menu for games in unity3d</p>
+        <p class="title-do">A GAME MENU FOR UNITY3D</p>
         <p class="project-description">I majored in 3d gaming. I used unity to make games for most of my projects. This is a simple scene opening game I developed in unity</p>
       </div>
        <img src="images/unity.png" alt="unity logo" style="width:80%; height:200px;">
-       <a href="https://github.com/sewagodimo/Games-Menu" ><button class="button-do" style="background-color: black;">View Code</button></a>
+       <a href="https://github.com/sewagodimo/Games-Menu" ><button class="button-do unity" style="">View Code</button></a>
     </div>
       </div>
 
@@ -244,16 +244,16 @@
   <p><span class="error">* required field.</span></p>
 <form  action="https://docs.google.com/forms/d/e/1FAIpQLSclNi16YlkiJ5iq6sacWuvR4CyAUYZJm7VIVkRmmz9wp3oKjA/formResponse" > 
       <label for="name" > Name <b>*</b> </label>
-    <input type="text" id="name" name="entry.1088104679" placeholder="">
+    <input type="text" id="name" name="entry.1088104679" placeholder="" style="width:50%">
 <br/>
      <label for="email">Email<b>*</b></label>
-    <input type="text" id="email" name="entry.500406251" placeholder="" style="width:400px">
+    <input type="text" id="email" name="entry.500406251" placeholder="" style="width:50%">
 <br/>
 
-    <label for="subject">Message<b>*</b></label>
-    <textarea id="msg" name="entry.257763532" placeholder="Write something.." style="height:100px"></textarea>
-
-    <input type="submit" value="Send" class="button">
+    <label for="subject" style="text-align: center;">Message<b>*</b></label>
+    <textarea id="msg" name="entry.257763532" placeholder="Write something.." style="height:100px; width: 50%;"></textarea>
+<br/>
+    <input type="submit" value="Send" class="button" style="padding-right: 5%;">
     </form>
 </div>
 </div>
