I added a link to my blog

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
        <a href="#home" >HOME</a>
        <a href="#about">ABOUT</a>
         <a href="#contactheading">CONTACT</a>
-         <a href="https://ednecia-personal.herokuapp.com/pages/Home" target="_blank">PERSONAL SITE</a>
+         <a href="#works">PROJECTS</a>
+         <a href="https://medium.com/@EdneciaM" target="_blank">BLOG</a>
   
         <section style="" class="socials"> 
 
@@ -57,17 +58,7 @@
   </div>
 
   <div id="down"></div>
-<div class="heading" id="particles">GUESS THE WORD THAT THE BUBBLES WILL FORM?</div>
-<div style="background: black;text-align: center;">
-<canvas id="scene" style="height: 480px;width: 100%"></canvas>
-  <input id="copy" type="text" value="" style="display: none;background-color: white;" />
 
-<input id="guesstext" type="text" value=""  />
-<input type="submit" onclick="checkWord()" value="guess">
-    <script src="javascript.js" ></script>
-<div style="height: 20px;"></div>
- 
-</div>
 <div class="photo-parallax"> 
 <div class="heading" id="tictac">LET'S PLAY TIC TAC TOE</div>
 
@@ -263,8 +254,19 @@
   <img src="images/ednecia.png" style="height: 25px;width: 25px">
    Made by Sewagodimo Ednecia Matlapeng 
    mtledn001@myuct.ac.za 
-
+<div>_</div>
  </div>
+ <div class="heading" id="particles">GUESS THE WORD THAT THE BUBBLES WILL FORM?</div>
+<div style="background: black;text-align: center;">
+<canvas id="scene" style="height: 480px;width: 100%"></canvas>
+  <input id="copy" type="text" value="" style="display: none;background-color: white;" />
+
+<input id="guesstext" type="text" value=""  />
+<input type="submit" onclick="checkWord()" value="guess">
+    <script src="javascript.js" ></script>
+<div style="height: 20px;"></div>
+ 
+</div>
 
    
 </body>
